objects/blng__DebitNote__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debit Notes</relationshipLabel>
        <relationshipName>DebitNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <inlineHelpText>Amount allocated to Invoices</inlineHelpText>
        <label>Allocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Allocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__AvailableForPayment__c</fullName>
        <label>Available for Payment</label>
        <summarizedField>blng__DebitNoteLine__c.blng__AvailableForPayment__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <label>Balance</label>
        <summarizedField>blng__DebitNoteLine__c.blng__AvailableBalance__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debit Notes (Bill To Account)</relationshipLabel>
        <relationshipName>Debit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debit Notes</relationshipLabel>
        <relationshipName>Debit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Debit Note</relationshipLabel>
        <relationshipName>BillingFinanceBookDebitNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Debit Note</relationshipLabel>
        <relationshipName>BillingFinancePeriodDebitNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLineAllocations__c</fullName>
        <label>Credit Note Line Allocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__CreditNoteLineAllocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLineUnallocations__c</fullName>
        <label>Credit Note Line Unallocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__CreditNoteLineUnallocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteDate__c</fullName>
        <label>Debit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteSourceAction__c</fullName>
        <label>Debit Note Source Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DebitNoteSourceAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__EffectiveTaxDate__c</fullName>
        <label>Effective Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineAllocations__c</fullName>
        <label>Invoice Line Allocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Allocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineUnallocations__c</fullName>
        <label>Invoice Line Unallocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Unallocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__NetCreditNoteAllocations__c</fullName>
        <formula>blng__CreditNoteLineAllocations__c  -  blng__CreditNoteLineUnallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Credit Note Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__NetInvoiceAllocations__c</fullName>
        <formula>blng__InvoiceLineAllocations__c  -  blng__InvoiceLineUnallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Invoice Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__NetPaymentAllocations__c</fullName>
        <formula>blng__Payments__c  -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Payment Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBalance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c + blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments1__c</fullName>
        <formula>blng__Payments__c -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <label>Payment Allocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Payments__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <label>Payment Unallocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Refunds__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <inlineHelpText>Current status of the credit memo. Can be: Draft Posted Canceled</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Subtotal__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <summarizedField>blng__DebitNoteLine__c.blng__TaxAmount__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <summarizedField>blng__DebitNoteLine__c.blng__TotalAmount__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TotalAvailableForAllocation__c</fullName>
        <formula>blng__TotalAmount__c - blng__TotalNetAllocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Allocation (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalNetAllocations__c</fullName>
        <formula>blng__NetCreditNoteAllocations__c  +  blng__NetInvoiceAllocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Allocations (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <label>Unallocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Unallocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Debit Note</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__DebitNoteDate__c</columns>
        <columns>blng__TotalAmount__c</columns>
        <columns>blng__Allocations__c</columns>
        <columns>blng__Unallocations__c</columns>
        <columns>blng__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Debit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>